# LURocketry2023

./: README.md  test.txt
GPSRX/: GPSRX.ino
GPSTX/: GPSTX.ino
GPSTX_mucked/: GPSTX_mucked.ino
circuitpython/: IMU.py  cdr_demo.py  fall_detect.py  fullscale.py  sd_logtemp.py
circuitpython/rp2040/: micropython-ADAFRUIT_FEATHER_RP2040-20220618-v1.19.1.uf2  micropython-rp2-pico-20221108-unstable-v1.19.1-629-ga2fd382c3.uf2
circuitpython/rp2040/circuitpython/: adafruit-circuitpython-adafruit_feather_rp2040-en_US-7.3.3.uf2
circuitpython/rp2040/circuitpython/blink/CircuitPython_Templates/blink/: README.txt
i2cTest/: CMakeLists.txt  i2cTest.c
rp2040_berryimu/: CMakeLists.txt  IMU.cpp  IMU.h
rp2040_i2c_tools/: CMakeLists.txt  regops.c  regops.h
subscale_code/: IMU.py  sd+imu.py  sd.py  stepper.py
subscale_code/libraries/: adafruit_lis3mdl.py  adafruit_pcf8523.py
